fix: prevent clicks behind header

--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -15,7 +15,7 @@
 	position: absolute;
 	z-index: 1;
 	inset: 0;
-	pointer-events: none;
+	/* pointer-events: none; */ /* capture clicks to avoid mis-clicks on something behind */
 	height: calc(100% + 8px);
 	mask-image: linear-gradient(
 		to bottom,
